--- a/Cafeine/Themes/Generic.xaml
+++ b/Cafeine/Themes/Generic.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cafeine"
-    xmlns:local2="using:Cafeine.Views.Wizard">
+    xmlns:local2="using:Cafeine.Views.Wizard"
+    xmlns:local3="using:Cafeine.Views.Resources.Controls">
 
     <Style TargetType="local2:EpisodeListControl">
         <Setter Property="Template">
@@ -10,6 +11,21 @@
                 <ControlTemplate TargetType="local2:EpisodeListControl">
                     <Border
                         Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="local3:CafeineFlyoutButton">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local3:CafeineFlyoutButton">
+                    <Border
+                        Width="{TemplateBinding Width}"
+                        Height="{TemplateBinding Height}"
+                        Background="Transparent"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}" />
                 </ControlTemplate>
