--- a/Cafeine/Views/ItemDetailsPage.xaml
+++ b/Cafeine/Views/ItemDetailsPage.xaml
@@ -7,6 +7,7 @@
     xmlns:model="using:Cafeine.Models"
     xmlns:mvvm="using:Cafeine.Services.Mvvm"
     xmlns:r="using:Cafeine.Views.Resources"
+    xmlns:rc="using:Cafeine.Views.Resources.Controls"
     xmlns:vm="using:Cafeine.ViewModels"
     Background="{ThemeResource LegacyDarkBlue}"
     Loaded="Page_Loaded"
@@ -119,6 +120,13 @@
                             Text="{x:Bind Path=Vm.DescriptionTextBlock, Mode=OneWay}"
                             TextTrimming="CharacterEllipsis"
                             TextWrapping="Wrap" />
+                        <Grid>
+
+                            <rc:CafeineFlyoutButton
+                                Width="100"
+                                Height="32"
+                                Text="Helllll" />
+                        </Grid>
                     </StackPanel>
                 </Grid>
                 <RelativePanel Grid.ColumnSpan="2" Margin="56,48,28,20" />
