Drop custom reveal border light project. Move control namespace to shared control
[ How the fuck did MS implement that feature only using composition API, though? ]

--- a/Cafeine/Themes/Generic.xaml
+++ b/Cafeine/Themes/Generic.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cafeine"
     xmlns:local2="using:Cafeine.Views.Wizard"
-    xmlns:local3="using:Cafeine.Views.Resources.Controls">
+    xmlns:local3="using:Cafeine.Shared.Controls">
 
     <Style TargetType="local2:EpisodeListControl">
         <Setter Property="Template">
